Correções completas de tipos do TS.